# GBArm-Core

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  compile_flags.txt  proj
include/: alu.h  arm_core.h  assembler.h  barrel_shifter.h  bus.h  cond.h  constants.h  core.h  cpu.h  error.h  instruction.h  instruction_stream.h  memory_bus.h  multiply.h  registers.h  repl.h  types.h  utils.h
include/internal/: alu.h  barrel_shifter.h  constants.h  multiply.h  registers.h  utils.h
internal/: alu.h  barrel_shifter.h  branch.h  cpu.h  data_transfer.h  error.h  impl_core.h  instruction.h  interrupt.h  memory_bus.h  multiply.h  psr.h  registers.h
scripts/: run_tests.sh
src/: alu.c  assembler.c  barrel_shifter.c  branch.c  bus.c  cond.c  constants.c  cpu.c  data_transfer.c  instruction.c  instruction_stream.c  interrupt.c  main.c  memory_bus.c  multiply.c  psr.c  registers.c  repl.c  utils.c
tests/: CMakeLists.txt  Makefile  alu_tests.c  assembler_tests.c  barrel_shifter_tests.c  branch_tests.c  busTests.c  bus_tests.c  cml.txt  compile_flags.txt  cond_tests.c  cpu_tests.c  data_transfer_tests.c  emutrixTests.c  instruction_tests.c  main_test_runner.c  memory_bus_tests.c  multiply_long_tests.c  multiply_tests.c  psr_tests.c  register_tests.c  results  run_tests.sh  test_helpers.h  test_macros.c  test_macros.h  test_main.c  utils_tests.c
